# FishyRL

./: .gitignore  CHANGELOG.md  CITATION.cff  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/source/: conf.py
examples/: CartPole.yaml  Dreamer.ipynb  Dreamer_Small.yaml  LunarLander.yaml  RLGym_Preview.ipynb  dreamer_CartPole.ipynb
examples/configs/: Ant.yaml  BipedalWalker.yaml  CartPole.yaml  Dreamer_Base.yaml  Dreamer_Small.yaml  Hopper.yaml  LunarLander.yaml  RLGym.yaml
fishyrl/: __init__.py  actions.py  buffers.py  distributions.py  dreamer.py  environments.py  losses.py  models.py  utilities.py
fishyrl/rlgym/: __init__.py  rewards.py
tests/: test_losses.py  test_models.py
