[project]
name = "fishyrl"
version = "0.14.1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pyyaml",  # For cfg
    "torch",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pydata-sphinx-theme",
    "pytest",
    "ruff",
    "sphinx",
]
gym = [
    "gymnasium[classic_control,box2d,mujoco]",  # Make sure to install OpenGL for MuJoCo
]
extras = [
    "imageio",  # For saving evaluation videos as gifs
    # "moviepy==1.0.3",  # For recording videos in evaluation
    "tensorboard",  # Maybe optional
    "tensorflow", # Optional for tensorboard features
]

[build-system]
requires = ["setuptools<81", "wheel"]  # Pinned to avoid issues with `gymnasium` rendering
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ANN", "D", "I", "W"]
ignore = ["E701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"test_*.py" = ["ANN201", "D100", "D103"]
"docs/**/*.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"
