[project]
name = "fishyrl"
version = "0.22.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops",
    "numpy",
    "pyyaml",  # For cfg
    "scipy",  # For Hungarian loss
    "torch",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pydata-sphinx-theme",
    "pytest",
    "ruff",
    "sphinx",
]
gym = [
    "gymnasium[classic_control,box2d,mujoco]",  # Make sure to install OpenGL for MuJoCo
]
rlgym = [
    "imageio[ffmpeg]",  # For recording videos with RLViser
    "rlgym[rl-rlviser]",  # Uses numpy 1.26.4 with [all], fine with numpy 2+, perhaps remove from install, as it is not meant to be a dependency
]
headless = [
    "mss",  # For taking screenshots
    "psutil",  # For detecting RLViser process
    "pyautogui",  # For exiting out of the RLViser options menu
    "pyvirtualdisplay",  # For headless rendering in rlgym
]
extras = [
    "imageio",  # For saving evaluation videos as gifs
    # "moviepy==1.0.3",  # For recording videos in evaluation
    "tensorboard",  # Maybe optional
    "tensorflow", # Optional for tensorboard features
]

[build-system]
requires = ["setuptools<81", "wheel"]  # Pinned to avoid issues with `gymnasium` rendering
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["ANN", "D", "I", "W"]
ignore = ["E701"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"test_*.py" = ["ANN201", "D100", "D103"]
"docs/**/*.py" = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"
